--- a/test/test_env.yaml
+++ b/test/test_env.yaml
@@ -1,8 +1,9 @@
 channels:
   - bioconda
   - anaconda
+  - conda-forge
 dependencies:
-  - snakemake >=5.2.0
+  - snakemake =5.2.0
   - sra-tools =2.9.1
   - pandas =0.23
   - jupyter =1.0
