init unified env

--- a/env.yaml
+++ b/env.yaml
@@ -1,3 +1,4 @@
+name: dopseq
 channels:
   - conda-forge
   - bioconda
@@ -5,7 +6,9 @@ channels:
   - anaconda
 dependencies:
   - python =3.6
+  - snakemake =5.2.0
   - cutadapt =2.9
+  - fastqc =0.12.1
   - bwa =0.7.15
   - samtools =1.6
   - picard =2.9.2
