--- a/test/test_env.yaml
+++ b/test/test_env.yaml
@@ -1,10 +1,5 @@
+name: dopseq_test
 channels:
   - bioconda
-  - anaconda
-  - conda-forge
 dependencies:
-  - snakemake =5.2.0
   - sra-tools =2.9.1
-  - pandas =0.23
-  - jupyter =1.0
-  - xlrd=1.1.0
