--- a/env.yaml
+++ b/env.yaml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - bioconda
   - r
-  - anaconda
+  - nodefaults
 dependencies:
   - python =3.6
   - snakemake =5.2.0
@@ -13,9 +13,9 @@ dependencies:
   - samtools =1.7
   - picard =2.9.2
   - pybedtools =0.7.10
-  - r =3.4.1
+  - r-base =3.5.1
   - rpy2 =2.9.4
-  - bioconductor-dnacopy =1.52.0
+  - bioconductor-dnacopy =1.56.0
   - pandas =0.23
   - numpy =1.15.2
   - openpyxl =2.4
