--- a/env.yaml
+++ b/env.yaml
@@ -5,20 +5,20 @@ channels:
   - r
   - nodefaults
 dependencies:
-  - python =3.6
-  - snakemake =5.2.0
-  - cutadapt =2.9
-  - fastqc =0.12.1
-  - bwa =0.7.15
-  - samtools =1.7
-  - picard =2.9.2
-  - pybedtools =0.7.10
-  - r-base =3.5.1
-  - rpy2 =2.9.4
-  - bioconductor-dnacopy =1.56.0
-  - pandas =0.23
-  - numpy =1.15.2
-  - openpyxl =2.4
-  - xlrd =1.2.0
-  - scipy =1.1.0
-  
+  - python
+  - snakemake
+  - cutadapt
+  - fastqc
+  - bwa
+  - samtools
+  - picard
+  - pybedtools
+  - r-base
+  - rpy2
+  - bioconductor-dnacopy
+  - pandas
+  - numpy
+  - openpyxl
+  - xlrd
+  - scipy
+
