rm r conda channel

--- a/env.yaml
+++ b/env.yaml
@@ -2,10 +2,8 @@ name: dopseq
 channels:
   - conda-forge
   - bioconda
-  - r
-  - nodefaults
 dependencies:
-  - python
+  - python =3
   - snakemake
   - cutadapt
   - fastqc
